# mdcore-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  debug.sh  deps.sh  main.cpp  make_run.sh  mdcore.cpp  run.sh  testcases.cpp
.github/workflows/: codeql-analysis.yml
include/mdcore/: command.h  command_listener.h  config.h  config_handler.h  core.h  dispatcher.h  json_utils.h  listener.h  logger.h  member.h  messages.h  subcommand_listener.h  utils.h
lib/: emoji.h
lib/aegis/: permission.hpp
lib/aegis/impl/: permission.cpp
mdcore/: CMakeLists.txt  JSONUtils.cpp  command.cpp  command_listener.cpp  config.h  config_handler.cpp  constants.h  dispatcher.cpp  errorLogger.cpp  errorLogger.h  json_utils.cpp  json_utils.h  jsonutils.h  listener.cpp  logger.cpp  logger.h  mdcore.cpp  mdcore.h  mdcore.sln  mdcore.vcxproj  mdcore.vcxproj.filters  member.cpp  messages.h  utils.cpp  utils.h
mdcore-cpp/: CMakeLists.txt  command_listener.cpp  dispatcher.cpp  logger.cpp
mdcore/include/mdcore/: command.h  core.h  logger.h  member.h
mdcore/sleepy-integration/: bot.cpp  command.cpp  command.h  command_listener.cpp  command_listener.h  dispatcher.cpp  dispatcher.h  listener.cpp  listener.h  member.cpp
non-compile/: bot.h
