#set(CMAKE_BUILD_TYPE Debug)
cmake_minimum_required(VERSION 3.12.0)
project(mdcore)
set(HEADER_ONLY_SOURCES lib/catch.hpp lib/json.hpp lib/emoji.h)

#add_executable(mdcore_testbot main.cpp ${HEADER_ONLY_SOURCES})
add_subdirectory(lib/sleepy-discord)
add_subdirectory(mdcore)
#target_link_libraries(mdcore sleepy-discord)
#target_link_libraries(mdcore_testbot mdcore sleepy-discord)
